fix: per-block translate
fixes #507
